[gd_scene load_steps=3 format=3 uid="uid://877fb26ym5ek"]

[ext_resource type="Script" path="res://Assets/Scripts/SpellDisplayItem.gd" id="1_q1tfu"]
[ext_resource type="Texture2D" uid="uid://pd4hnokqsm54" path="res://Assets/Sprites/Spells/Icons/fireball.png" id="1_tss1g"]

[node name="SpellDisplayItem" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_q1tfu")

[node name="BorderColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 29.0
offset_bottom = 29.0
color = Color(0, 0, 0, 0.247059)

[node name="IconTextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 28.0
offset_bottom = 28.0
texture = ExtResource("1_tss1g")
expand_mode = 2
stretch_mode = 3

[node name="SpellNumberLabel" type="Label" parent="."]
editor_description = "This should be replaced with an input glyph later on"
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 4
text = "1"
horizontal_alignment = 2
vertical_alignment = 2
